fix for footer on small screens

--- a/sphinx_oe_theme/bootstrap-oe/static/oe-theme/css/bootstrap.css
+++ b/sphinx_oe_theme/bootstrap-oe/static/oe-theme/css/bootstrap.css
@@ -36,6 +36,9 @@ audio:not([controls]) {
 }
 
 .pageContainer { min-height: 100%; height: 100%; margin: 0 auto -136px; }
+@media (max-width: 769px) {
+  .pageContainer { min-height: 100%; height: auto; margin: 0 auto -68px; }
+}
 #footerContainer { height: 68px; }
 .push { height: 68px; }
 
@@ -5835,6 +5838,7 @@ button.close {
   background-color: #d9edf7;
   border-color: #bce8f1;
   color: #31708f;
+  background-image: none;
 }
 .alert-info hr {
   border-top-color: #a6e1ec;
@@ -5846,6 +5850,7 @@ button.close {
   background-color: #fcf8e3;
   border-color: #faebcc;
   color: #8a6d3b;
+  background-image: none;
 }
 .alert-warning hr {
   border-top-color: #f7e1b5;
@@ -5857,6 +5862,7 @@ button.close {
   background-color: #f2dede;
   border-color: #ebccd1;
   color: #a94442;
+  background-image: none;
 }
 .alert-danger hr {
   border-top-color: #e4b9c0;
